Corrected code towards APSA, new version of the paper

--- a/escrito/urge02.tex
+++ b/escrito/urge02.tex
@@ -58,15 +58,15 @@ The paper offers a preliminary inspection of the urgency authority and its use i
 
 \section{The urgency authority}
 
-Formal executive authority to interfere in the Congressional agenda is established in the Constitution (art.\ 74) and Congressional Organic Law (arts.\ 26 and 27). The constitution stipulates that the president can urge action on any bill at any stage of the legislative process. The chamber receiving the urgency message is compelled to act on the bill (``discuss and vote it'') before a specific deadline. Since inter-cameral differences are dealt with in conference (\emph{comisión mixta}, const.\ arts.\ 68--70), an urgency message at this stage compells Congress (ie.\ the conference and both chambers) to act before the deadline. The law defines the breadth of the interference, giving the president a choice of sending a `four-week notice' (\emph{urgencia simple}), a `two-week notice' (\emph{urgencia suma}), or an `act now' (\emph{discusión inmediata} urgency message.\footnote{In July 2010, when the constitution was amended, the deadlines for the act-now and two-week urgencies were somewhat relaxed, stretching from 10 to 15 and from 3 to 6 days, respectively; four-week urgencies stayed put, at 30 days.} Raising maximum urgency in the right circumstances---an act-now message attached to a bill in bicamernal conference before 2010---gave each instance a single day to act: one for the conference to report a compromise bill, and one for each chamber to sequentially evaluate and push the bill to the floor for an up or down vote (congressional practice is well summarized by the library of Congress at \url{http://www.bcn.cl/ecivica/formacion/}.) The president can retire the urgency at will, with immediate effects. Urgencies affect business in the chamber receiving the message only (right?), and they expire at the end of the regular session on March 10th every year. 
+Formal executive authority to interfere in the Congressional agenda is established in the Constitution (art.\ 74) and Congressional Organic Law (arts.\ 26 and 27). The constitution stipulates that the president can urge action on any bill at any stage of the legislative process. The chamber receiving the urgency message is compelled to act on the bill (``discuss and vote it'') before a specific deadline. Since inter-cameral differences are dealt with in conference (\emph{comisión mixta}, const.\ arts.\ 68--70), an urgency message at this stage compells Congress (ie.\ the conference and both chambers) to act before the deadline. The law defines the breadth of the interference, giving the president a choice of sending a `four-week notice' (\emph{urgencia simple}), a `two-week notice' (\emph{urgencia suma}), or an `act now' (\emph{discusión inmediata}) message.\footnote{In July 2010, when the constitution was amended, the deadlines for the act-now and two-week urgencies were somewhat relaxed, stretching from 10 to 15 and from 3 to 6 days, respectively; four-week urgencies stayed put, at 30 days.} Raising maximum urgency in the right circumstances---an act-now message attached to a bill in bicamernal conference before 2010---gave each instance a single day to act: one for the conference to report a compromise bill, and one for each chamber to sequentially evaluate and push the bill to the floor for an up or down vote (congressional practice is well summarized by the library of Congress at \url{http://www.bcn.cl/ecivica/formacion/}.) The president can retire the urgency at will, with immediate effects. Urgencies affect business in the chamber receiving the message only (*confirm this), and they expire at the end of the ordinary period on March 10th every year. 
 
-Vagueness surrounds key aspects of the urgency authority. When a 3- or 6-day limit is established, are those business or calendar days? I refer to the messages in weeks given indefinition about this (and, when coding deadlines in the empirical sections below, arbitrarily rely on business days). More important, what if Congress fails to act on an urgent bill before the deadline? More specifically, what does the reversion agenda and/or policy if Congress ignores an urgency message?\footnote{How is the day's order (\emph{tabla}) prepared in each chamber? Investigating scheduling in each chamber should illuminate the question. The Constitution and Organic Law remain silent about it.} 
+Vagueness surrounds key aspects of the urgency authority. When a 3- or 6-day limit is established, are those business or calendar days? I refer to the messages in weeks given indefinition about this (and, when coding deadlines in the empirical sections below, arbitrarily rely on business days). More important, what if Congress fails to act on an urgent bill before the deadline? More specifically, what is the reversion agenda and/or policy if Congress ignores an urgency message?\footnote{How is the day's order (\emph{tabla}) prepared in each chamber? Investigating scheduling in each chamber should illuminate the question. The Constitution and Organic Law remain silent about it.} 
 
 The importance of the issues left obscure is such that the possibility that the urgency authority has no effect cannot be ruled out. The empirical assessment below suggests that this is far from being true in Chile. 
 
 %What if Congress fails to act? Can urgency be ignored? Can a committee report kill the bill or does urgency compell a vote in the floor (law's art.\ 27 ``su discusión y votación en la Cámara requerida deberán quedar terminadas en el plazo'')?
 
-The urgency authority has received relatively scant scholarly attention. In a piece putting Chilean executive-legislative relations in perspective, \citet{siavelis.2002} hypothesized urgencies' game-changer potential. Data covers the first post-transition presidency only, yet revealed just how very frequentle urgency messages are sent to Congress, numbers. Analysis sought to discover if urgent bills circulated the steps of the legislative process faster. Such pattern is clearly distinguishable for act-now urgencies, but not for the other kind, durations here. 
+The urgency authority has received relatively scant scholarly attention. In a piece putting Chilean executive-legislative relations in perspective, \citet{siavelis.2002} hypothesized urgencies' game-changer potential. Data covers the first post-transition presidency only, yet revealed just how very frequently urgency messages are sent to Congress, *numbers. Analysis sought to discover if urgent bills circulated the steps of the legislative process faster. Such pattern is clearly distinguishable for act-now urgencies, but not for the other kind, durations here. 
 
 Another systematic study of the urgency authority is \citet{aleman.navia.UrgChi.2009}. The piece concentrates on presidential proposals only up to 2006, seeking determinants of passage. The units are individual bills, and the size of the executive agenda varies substantially over the years. Variation is quantitative (numbers up, down here) and qualitative, presidents manifesting different propensities to aim at constitutional reform. Of direct relevance are the findings on urgencies. Controlling for key policy domains, chamber of origin, seat margins, and presidential approval, and clustering errors by legislative year, different prioritization reveal quite different effects in passage. Act-now and 2-week notices significantly increase the probability of bill passage, but not 4-week notices. 
 
@@ -81,6 +81,64 @@ Urgency authority lets executives force action on legislation, more or less imme
 % \citet{carey.shugart.1998a} offer clues on the delegation of unilateral authority to the executive. Latin American presidents have much more valence on policy than legislators \citep{londregan.2000a}, and such informational asymmetries may create incentives for delegation. Delays to reach agreement may also diminish the value of policy \citep{baron.ferejohn.1989}, so rather than delegate proposal power within the chamber, legislators may prefer to see the president set the agenda. Agency costs will be determinant on the actual prevalence of such forms. When set constitutionally, as Chile does, there is no alternative. 
 
 % This section highlights other elements that should be of help in building a model of urgencies. I elaborate on two possible uses of the urgency: when rejection is costly and when there is impatience. Forcing rejection of a proposal might activate costs in units other than policy. Changing the nature of what is being negotiate might, in fact, trigger policy concessions. (Similar a vetoes with Q=.5). Another use s to exploit impatience when time is a constrain. Avoiding agenda obstruction may, again, offer the executive a bargaining chip. 
+
+\subsection{Costly scheduling and inaction}
+
+Five constitutions of the Americas give executives the power to interfere, to some degree, with the assembly's voting schedule. The urgency authority varies considerably \citep[][:437]{morgenstern.2002b}. In Brazil, the assembly must act on a bill deemed urgent withing 45 days, or else it takes precedence over all other legislative business. And, since 2001, all executive unilateral policy (\emph{medidas provis\'orias}) become urgent upon publication. In Colombia, an urgent bill goes to the top of the voting schedule immediately. In Uruguay and Chile, legislators must act withing a pre-specified, short period; failure to do so converts the urgent bill into law in Uruguay. In Chile the consequences of inaction are indetermined. And in Mexico since 2012, the president can declare urgent up to four bills every year, which must be scheduled for a floor vote within 30 days. 
+
+\begin{figure}
+  \centering
+    \tikzstyle{mid}=[circle,draw]
+    \begin{tikzpicture}
+      \node[mid] at (2,0) (e) {\emph{E}}; 
+      \node[mid] at (4,1) (l) {\emph{L}}; 
+      \node[right] at (4,-1) (ee) {$x_0$}; 
+      \node[right] at (6, 2.5) (le1) {$x_1-o$};  
+      \node[right] at (6, 1) (le3) {$x_0-o-c_1$}; 
+      \node[right] at (6,-.5) (le2) {$r-c_2$}; 
+      \path[-]  (e) edge node [above, sloped] {\footnotesize{propose}} (l);
+      \path[]   (e) edge node [below, sloped] {\footnotesize{$x_1$}}   (l); 
+      \path[-o] (e) edge node [below, sloped] {\footnotesize{not}}     (ee) 
+                 (l) edge node [above, sloped] {\footnotesize{accept}} (le1) 
+                 (l) edge node [below, sloped] {\footnotesize{ignore}} (le2);
+      \path[-o] (l) edge node [above, sloped] {\footnotesize{reject}} (le3);
+    \end{tikzpicture}  \begin{tabular}{lrrr}
+  Case                       & $r$   & $c_1$ & $c_2$    \\ \hline
+  Chile                      & $x_0$ & 0     & $>0$     \\
+  Brazil (urgency), Colombia & $x_0$ & 0     & $> o$ \\
+  Brazil (MP)                & $x_0$ & $>0$  & $> o$ \\
+  Brazil (MP up to 2001)     & $x_1$ & $>0$  & 0        \\
+  Mexico                     & $x_0$ & 0     & ?        \\
+  Uruguay                    & $x_1$ & 0     & 0        \\
+  \end{tabular}
+  \caption{Urgency and costly scheduling and rejections. }\label{f:costly}
+\end{figure}
+
+Figure \ref{f:costly} offers a framework to compare different urgency authorities. It is set as a two-player game between the executive and the pivotal legislator. The executive starts by proposing urgent policy $x_1$, or not (ending the game with the status quo $x_0$ in place). Initially, costs $c_1 = c_2 = 0$ so that they cancel from the description, for ease of exposition. The restriction is relaxed afterwards. If called to play, the legislator faces three actions to choose from, all leading to terminal nodes. The legislator can accept the proposal, replacing the status quo with policy at $x_1$. Given scarce scheduling time, this choice entails an opportunity cost $o$. Conceptually, cost $o$ is the value of the best alternative policy that the legislator might adopt if scheduled instead of proposal $x_1$. With scarce time, and an institution that no two (or more) proposals are scheduled simultaneously, putting $x_1$ to a vote inevitably postpones the adoption of the alternative---indefinitely, perhaps. Cost $o$ must therefore be deducted from the value of policy $x_1$ in the top terminal node (the figure expresses costs from the legislator's perspective). The legislator could alternatively choose to keep the status quo by rejecting the proposal. Cost $o$ must also be deducted in this case due to the need to schedule the bill in order to vote it down in the floor. And the legislator could opt to ignore the proposal, policy reverting to a pre-defined reversion outcome $r$. Unlike the other two alternatives, ignoring the proposal spares cost $o$: time is freed to schedule something else. 
+
+Reversionary policy $r$ varies across constitutions, adopting either the status quo ante or the proposal. The Uruguayan reverts policy to executive proposals declared urgent but not scheduled for a vote (i.e., $r=x_1$); the rest revert to the status quo ante ($r=x_0$)---although the Brazilian compared to the Uruguayan in cases of urgency by \emph{medida provis\'oria} up to the 2001 reform.\footnote{\emph{Medidas provis\'orias} expire 60 days after publication. Before the reform, a Supreme Court ruling legalized the option of re-issuing MPs that had not been discussed and voted in Congress upon expiration, leading to the instituion described in the text ($r=x_1$). The reform adopted 9/11/2001 limits to one re-issue, with urgency kicking in in case of congressional inaction. See \citet{figueiredo.etal.1996}.} When $r=x_0$, all else equal, the legislator prefers to ignoring rather than rejecting undesirable proposals, so as to avoid opportunity costs (this claim ignores the possibility of $o<0$). Jibes with evidence, report. The other institution $r=x_1$ results in a drastic change in executive--legislative relations, as congressional inaction becomes a way of adopting presidential policy without opportunity cost.  
+
+Relaxing the restriction of nil costs other than $o$ brings further depth into the comparative framework. I highlight three elements making such costs distinct from zero: diffuse support becoming concentrated, salience, and from scheduling interference.
+
+The first is associated with unilateralism, which is associated with the urgency authority in Brazil only (executive unilateralism per se, though, is present in other constitutions). \emph{Medidas provis\'orias} turns potential into actual winners and losers. At the proposal stage, there is an expectation that a group might receive a flow of benefits if all goes according to plan. All is surrounded by a fair amout of uncertainty, both about the likelihood that policy will in fact materialize and about the scope of benefits associated with the details of the policy that eventually passes. Once adopted, this uncertainty vanishes. When policy is adopted unilaterally, winners and losers are clearly identified before the measure is discussed and voted, changing the assembly's calculus. Rescinding the decree will face an opposition that is easily identifiable. This translates into a cost.  
+
+The salience component derives from the very notion of urgency. Labeling a proposal thus signals presidential priority. Coupled with a clever communication strategy, the urgency authority contributes to placing an issue in the public agenda, increasing media attention and nurturing public debate. An undesired proposal that could have easily been dusted under the carpet in normal circustances will, as a consequence of increased salience, be much harder to duck---adding a cost. 
+
+Scheduling interference adds a substantal cost when the institution brings an urgent proposal to the top of the assembly's Day's Order. At this point, ignoring proposal $x_1$ not only will not spare opportunity cost $o$, but scheduling the proposal becomes more attractive in order to pay $o$ in one session only, and move on to the next item in the agenda. Scheduling interference also adds costs in the form of possible splits of your legislative coalition---when the urgency authority brings forth to a vote issues that majority leaders would rather keep away from the floor. 
+
+The table accompanying Figure \ref{f:costly}'s game tree summarizes costs other than $o$ associated with rejection and ignoring the proposal in the five constitutions. A non-zero rejection cost $c_1$ adds to the opportunity cost in case of urgencies stemming from executive unilateral action only (fighting concentrated opponents). Ignoring cost $c_2$ remains nil in Uruguay and remained so in Brazil before the 2001 reform (inaction reverts to $r=x_1$ automatically). In Mexico, the consequences of inaction are indeterminate. Perhaps a future Supreme Court ruling or legislation will fill in the blanks. In Chile, a $c_2>0$ will be a direct function of how salient the proposal becomes upon raising the urgency. I discuss below how qualifying the urgency---as the constitution allows---generates expectations on the level of salience. In Colombia and post-reform Brazil, $c_2$ surpasses opportunity cost $o$ in light of scheduling interference (cost $o$ is paid in every session that the legislator opts for inaction). 
+
+--> Next, discuss Chile in detail. Tie salience to degree of urgency, showing that `Act now' is muche less used. 
+
+--> Hypotheses about div gov: cartel (in one chamber at least) does not have the president on its side, losing key negative agenda control. Makes majority's life much harder. 
+
+--> Connect to frequency of urgency usage; to reports observed and not withing deadline; to roll call votes celebrated. 
+
+--> Regressions on reports
+
+--> Regression on votes?
+
+--> Conclude about the effects of indeterminacy in Chile; announce Brazilian study.
 
 \subsection{Visibility}
 
@@ -129,15 +187,14 @@ Stylizing rejection of undesirable policy as entailing a cost reveals one aspect
   %   \end{tikzpicture}
   %  \\
   % \end{tabular}
-  \caption{Costly rejections. Parentheses right of outcomes are the legislator's gain vis-\`a-vis the status quo.}\label{f:costly}
+  \caption{Costly rejections. Parentheses right of outcomes are the legislator's gain vis-\`a-vis the status quo.}
 \end{figure}
 
-
-The urgency authority makes it harder, or even impossible, to exert negative agenda control, and the game in Figure \ref{f:costly} highlights how this matters. The executive starts by proposing new policy $x_1$ or not (ending the game with the status quo $x_0$ in place). New policy necessitates the the legislator's approval. The game tree contemplates two ways of reinstating the status quo after a proposal the legislator disagrees with has been made: by rejecting it, or by ducking the question (the dashed branch in the game tree). Explicit rejection entails a cost $c$ for the legislator, which is avoided by ignoring the issue. That large numbers of proposals in assemblies worldwide are never scheduled for consideration is consistent with the presence of non-zero rejection costs. 
+The urgency authority makes it harder, or even impossible, to exert negative agenda control, and the game in Figure \ref{f:costly} highlights how this matters. The executive starts by proposing new policy $x_1$ or not (ending the game with the status quo $x_0$ in place). New policy necessitates the legislator's approval. The game tree contemplates two ways of reinstating the status quo after a proposal the legislator disagrees with has been made: by rejecting it, or by ducking the question (the dashed branch in the game tree). Explicit rejection entails a cost $c$ for the legislator, which is avoided by ignoring the issue. That large numbers of proposals in assemblies worldwide are never scheduled for consideration is consistent with the presence of non-zero rejection costs. 
 
 Parentheses in the figure report the legislator's payoffs as gains against the status quo. Outcome $x_0$ in two of three terminal nodes accordingly has payoff zero because there is no change. The exception is explicit rejection, when the rejection cost must be netted from the nil payoff. And $b$ stands for the legislator's gain (which may be negative, just like costs can be positive) of accepting the executive proposal. 
 
-`Ignoring' strongly dominates `rejecting' the proposal whenever $c<0$. But a binding urgency message, however, changes the game structure by removing the dashed branch from the game tree---the urgent proposal can no longer be ignored,, it must be voted down at cost $c$. 
+`Ignoring' strongly dominates `rejecting' the proposal whenever $c<0$. But a binding urgency message, however, changes the game structure by removing the dashed branch from the game tree---the urgent proposal can no longer be ignored, it must be voted down at cost $c$. 
 
 This preliminary discussion of a simple game shows how, in the absence of costs associated with rejecting proposals, no room remains for policy $x_1$ to survive against the legislator's opposition ($b<0$). But big-enough costs ($c<b$) push the legislator to accept proposals she would otherwise reject. Costly rejection translates into accommodation, a policy advantage that no strategic executive will fail to exploit. 
 
@@ -243,7 +300,7 @@ The discussion so far points to urgency withdrawals, a common phenomenon. Accord
 
 \section{The data}
 
-Compared to other legislatures in the region, the Chamber of Deputies' web page (\url{www.camara.cl}), run by the Congressional Library, is remarkably informative and up-to-date. Input a bill's filing number (\emph{boletín}), and any user sees a detailed report with the bill's general traits: who initiated it, when, in what chamber, what it deals with, its status, etc. The report also lists and dates the proposal's milestones in transit through the meanders of the legislative process: committee referral, committee reports to the plenary, floor discussion and voting, navette to the other chamber, etc. It covers milestones in the Senate, too. Of direct relevance, all urgency messages that a bill may have received are listed chronologically. 
+Compared to other legislatures in the region, the C\'amara de Diputados' web page (\url{www.camara.cl}), run by the Congressional Library, is remarkably informative and up-to-date. Input a bill's filing number (\emph{boletín}), and any user sees a detailed report with the bill's general traits: who initiated it, when, in what chamber, what it deals with, its status, etc. The report also lists and dates the proposal's milestones in transit through the meanders of the legislative process: committee referral, committee reports to the plenary, floor discussion and voting, navette to the other chamber, etc. It covers milestones in the Senate, too. Of direct relevance, all urgency messages that a bill may have received are listed chronologically. 
 
 An inquiry was sent to the congressional staff in Oct.\ 2014 about the existence of an official API ot FTP site where this well-structured data could be downloaded en bloc. There was no response, so an automated script was prepared (using \texttt{Python}'s Selenium library---the site is javascript-rich) to scrape the web-page. Data analysis was done with a multiplicity of \texttt{R}'s libraries. Details of this script will be posted online. 
 
@@ -252,7 +309,7 @@ An inquiry was sent to the congressional staff in Oct.\ 2014 about the existence
 \begin{center}
 \begin{tabular}{lrrrrrr}
 Coalition   & 1990--94 & 1994--98 & 1998--2002    & 2002--06 & 2006--10 & 2010--14 \\ \hline
-\mc{7}{l}{\emph{~~Chamber of deputies}} \\
+\mc{7}{l}{\emph{~~C\'amara de Diputados}} \\
 President's & 60       & 58       & 58            & 53       & 51       & 50       \\
 Opposition  & 40       & 42       & 42            & 48       & 47       & 48       \\
 Regional    &          &          &               &          & 3        & 2        \\ \hdashline
@@ -264,7 +321,7 @@ Total       & $100^*$  & $100^*$  & $100^{*\dagger}$ & 100      & 100      & 100
 \mc{7}{l}{\footnotesize{Notes: $^*$ vacant seats dropped; $^\dagger$ margin varied above and below 50/50 due to vacancies.}}
 
 \end{tabular}
-\caption{The president's status in Congress. Percent seats controlled by electoral lists in each chamber. Between 1990 and 2010, the president's and opposition lists were Concertación and Alianza, respectively; they switched after 2010. The regional list includes splinters from each major list (Christian Democrats and UDI members). Source: prepared by the author with information from the chamber's web page at \protect\url{www.camara.cl} (some data kindly shared by Guillermo Rosas).}\label{t:congressSeats}
+\caption{The president's status in Congress. Percent seats controlled by electoral lists in each chamber. Between 1990 and 2010, the president's and opposition lists were Concertación and Alianza, respectively; they switched after 2010. The regional list includes splinters from each major list (Christian Democrats and UDI members). Source: prepared by the author with information from the C\'amara's web page at \protect\url{www.camara.cl} (some data kindly shared by Guillermo Rosas).}\label{t:congressSeats}
 \end{center}
 \end{table}
 
@@ -394,7 +451,7 @@ Right president          & \emph{26} & \emph{4}  & \emph{18}  & \emph{12}  & \em
 
 
 
-The abundance of urgency messages is remarkable. Not taking the February Summer break into account,\footnote{Three February weeks with urgency messages are retained in the count.} when Congress rarely convenes, less than one in three weeks in the period were free of urgency messages. The executive sent 7.6 weekly messages on average to the chamber of deputies, and 10.5 to the senate.
+The abundance of urgency messages is remarkable. Not taking the February Summer break into account,\footnote{Three February weeks with urgency messages are retained in the count.} when Congress rarely convenes, less than one in three weeks in the period were free of urgency messages. The executive sent 7.6 weekly messages on average to the C\'amara de Diputados, and 10.5 to the Senate.
 
 %   Cámara  
 % ##########
@@ -469,7 +526,7 @@ There are detailed plots, keep only one year
 
 Committee reporting is one step of the legislative process where the effects of urgency usage can be gauged. Unless the floor votes an exception unanimously, every bill in Chile is referred to a standing or special committee upon first introduction to each chamber. In this prefloor stage, a committee chooses to schedule or not a bill for discussion and hearings towards drafting a proposal for the plenary. Discretion to prioritize legislation could in principle translate into negative or gatekeeping power, and bill drafting into positive power---possibly turning standing committees into formidable actors in their jurisdiction \citep{cox.mccubbins.1993,fenno.1973,shepsle.weingast.1987}. No explicit discharge procedure exists in the Reglamento, but presumably is the same---unanimous consent---to except a bill from referral to committee. 
 
-The Hacienda (Finance) committee has special status in the committee system and deserves attention. It stands apart from other committees because it has jurisdiction over all bills authorizing spending in any domain (multiple referrals are common, how many?). Bills with authorizations \emph{must} be referred to Hacienda---the unanimous exception in inapplicable. Hacienda committee members, working along with Finance Ministry staff \citep{aleman.navia.UrgChi.2009}, may or may not appropriate funds from the budget when reporting the bill to the floor. Not unlike the Appropriations committee in the U.S.\ House, Hacienda stands as a control committee, a key link towards agenda control \citep{kiewiet.mccubbins.1991}. 
+The Hacienda (Finance) committee has special status in the committee system and deserves attention. It stands apart from other committees because it has jurisdiction over all bills authorizing spending in any domain (multiple referrals are common, how many?). Bills with authorizations \emph{must} be referred to Hacienda, and the unanimous exception is inapplicable. Hacienda committee members, working along with Finance Ministry staff \citep{aleman.navia.UrgChi.2009}, may or may not appropriate funds from the budget when reporting the bill to the floor. Not unlike the Appropriations committee in the U.S.\ House, Hacienda has the status of a control committee, a key link towards agenda control \citep{kiewiet.mccubbins.1991}. 
 
 Yet the urgency authority can be suspected of undermining the gatekeeping potential of committees. Unless urgency messages can be ignored with ease, committee inaction on undesirable but urgent legislation becomes impossible. 
 
@@ -501,7 +558,7 @@ All                 &  27      &  73      &  8251  \\
 \end{center}
 \end{table}
 
-Weekly aggregates were computed from the data. The dependent variable is the number of bills reported by some chamber of deputies committee any given week. Weeks when the chamber did not meet were dropped, adding any bill reported to the closest next week with a session.\footnote{Bill histories date reports when officially received (\emph{cuenta}), but some cases have prior mention to the report's finalization, which the algorithm incorrectly coded as the date. The same is true for weekly urgency messages, with figures for weeks with diputados not meeting corrected likewise.} Two figures were produced for analysis: weekly Hacienda committee reports, and weekly reports from any committee. The Hacienda aggregate seems preferable, letting analysis search for correlation with urgency messages explicitly targeting bills that were referred to that committee at some point. The total aggregate offers less control, but a more comprehensive picture. The average week in the 2006--2010 period had reports...
+Weekly aggregates were computed from the data. The dependent variable is the number of bills reported by some C\'amara committee any given week. Weeks when the C\'amara did not meet were dropped, adding any bill reported to the closest next week with a session.\footnote{Bill histories date reports when officially received (\emph{cuenta}), but some cases have prior mention to the report's finalization, which the algorithm incorrectly coded as the date. The same is true for weekly urgency messages, with figures for weeks with diputados not meeting corrected likewise.} Two figures were produced for analysis: weekly Hacienda committee reports, and weekly reports from any committee. The Hacienda aggregate seems preferable, letting analysis search for correlation with urgency messages explicitly targeting bills that were referred to that committee at some point. The total aggregate offers less control, but a more comprehensive picture. The average week in the 2006--2010 period had reports...
 
 Dependent variable is limited (a count, non-negative integer). Negative binomial regression for analysis. Included in the right side are weekly urgency messages. Aggregates distinguish different urgency messages: the number of act-now, 2-week, and 4-week notices, deadlines shortened, extended, and withdrawals. If some bill is given an act now message, an effect should be observed almost immediately, the current week or the next at most. But other urgency message effects, if any, should not necessarily be so immediate---legislators must react, and that takes time. In order to capture this, weekly lags of the regressors were included in the analysis. 
 
@@ -557,33 +614,33 @@ Dependent variable is limited (a count, non-negative integer). Negative binomial
 \begin{table}
 \begin{tabular}{l|ccccc|ccccc}
                  & \mc{10}{c}{Effect on committee reports ($t=0$ is current week)}                                      \\
-                 &   \mc{10}{c}{Dependent variable:} \\ 
-                 & \mc{5}{c}{Exec.~bill reports}      & \mc{5}{c}{MC bill reports}                      \\
+%                 &   \mc{10}{c}{Dependent variable:} \\ 
+                 & \mc{5}{c|}{DV = exec.~bill reports}      & \mc{5}{c}{DV = member bill reports}                      \\
 Type             & $t=0$    & 1        & 2       & 3       & 4         & $t=0$    & 1          & 2         & 3          & 4          \\ \hline
-\mc{11}{l}{\emph{Urgency targets: exec.~bills referred to Hacienda committee}}                                                                \\
-                 &                    \mc{5}{c}{(a)}                   &                       \mc{5}{c}{(b)}                         \\ 
+\mc{11}{l}{\emph{IV: urgencies targeting executive bills referred to Hacienda committee}}  \\
+                 &                    \mc{5}{c|}{(a)}                   &                       \mc{5}{c}{(b)}                         \\ 
 Act Now          &   $++$   &  $+$     &   $--$  &         &           &          &  $++$      &           &            &            \\
 2-week notice    &          &  $++$    &         &    $--$ &           &     $++$ &  $-$       &  $++$     &            &            \\
 4-week notice    &          &          &         &    $++$ &      $++$ &          &            &           &            &            \\
 Shorten deadline &          &  $++$    &         &         &           &          &            &           &            &            \\ \hdashline
-\mc{11}{l}{\emph{Urgency targets: MC~bills referred to Hacienda committee}}                                                                   \\
-                 &                    \mc{5}{c}{(c)}                   &                       \mc{5}{c}{(d)}                         \\ 
-Act Now          &          &          &         &         &           &     $++$ &  $++$      &           &            &            \\           
-2-week notice    &          & \mc{3}{c}{(not estimated)}   &           &          &            &  $++$     &      $++$  &            \\           
-4-week notice    &          &          &         &         &           &          &            &           &            &            \\           
+\mc{11}{l}{\emph{IV: urgencies targeting member~bills referred to Hacienda committee}}    \\
+                 &                    \mc{5}{c|}{(c)}                   &                       \mc{5}{c}{(d)}                         \\ 
+Act Now          &          &          &         &         &           &     $++$ &  $++$      &           &            &            \\
+2-week notice    &          & \mc{3}{c}{\footnotesize{(not estimated)}} &           &          &            &  $++$     &      $++$  &            \\ 
+4-week notice    &          &          &         &         &           &          &            &           &            &            \\  
 Shorten deadline &          &          &         &         &           &          &            &           &            &            \\ \hdashline
-\mc{11}{l}{\emph{Urgency targets: any exec.~bill}}                                                                                            \\
-                 &                    \mc{5}{c}{(e)}                   &                       \mc{5}{c}{(f)}                         \\ 
+\mc{11}{l}{\emph{IV: urgencies targeting any executive bill}}  \\
+                 &                    \mc{5}{c|}{(e)}                   &                       \mc{5}{c}{(f)}                         \\ 
 Act Now          &   $++$   &  $++$    &   $--$  &         &           &          &            &           &            &            \\
 2-week notice    &          &  $+$     &   $++$  &         &           &     $+$  &            &           &            &      $--$  \\
 4-week notice    &          &          &         &         &           &          &            &           &            &      $++$  \\
 Shorten deadline &          &          &         &         &           &          &            &           &            &            \\ \hline
 \mc{11}{l}{\footnotesize{$++,--: p<.05$; $+,-: p<.1$ (one-tailed tests)}}                                                            \\
 \end{tabular}
-\caption{Effect of weekly urgency messages on committee reports, chamber of deputies 2006--2014. Entries report signs and significance (one-tailed) of regression coefficients. Negative binomial method of estimation, with fixed Legislature effects (see text).}\label{t:negbin}
+\caption{Effect of weekly urgency messages on committee reports, C\'amara de Diputados 2006--2014. Entries report signs and significance (one-tailed) of regression coefficients. Negative binomial method of estimation, with fixed Legislature effects (see text).}\label{t:negbin}
 \end{table}
 
-Table \ref{t:negbin} offers a synthetic view of results, showing the sign and significance of key coefficients only---urgencies observed and lags. The form of the general model estimated is $nReports_t = \beta_0 + \beta_1 nUrgecies_t + \beta_2 nUrgecies_{t-1} + ...$, where $t$ is the current week, $t-1$ the week before, and so forth up to four lags. The right side makes a distinction of the number of weekly Act-now, 2-week, and 4-week notices. It also controls for (but the table does not report) progress in the current legislative year (percent remaining) and a dummy distinguising the 2010--2014 legislature from the 2006--2010 (omitted). 
+Table \ref{t:negbin} offers a synthetic view of results, showing the sign and significance of key coefficients only---urgencies observed and lags. The form of the general model estimated is $\text{nReports}_t = \beta_0 + \beta_1 \text{nUrgencies}_t + \beta_2 \text{nUrgencies}_{t-1} + ...$, where $t$ is the current week, $t-1$ the week before, and so forth up to four lags. The right side makes a distinction of the number of weekly Act-now, 2-week, and 4-week notices. It also controls for (but the table does not report) the percentage of the current legislative year remaining and a dummy distinguising the 2010--2014 legislature (from the 2006--2010 baseline). 
 
 Models for weekly reports to executive (models a, c, e) and to MC bills (model b, d, f) were estimated separately. Effects of aiming the urgency authority at different subsets of projects were investigated. So model (a) goes in search of how the number of weekly urgencies to executive bills referred to Hacienda affect weekly reports by that committee of executive bills. Model (b) does the same number of weekly urgencies affect Hacienda committee reports of MC bills. 
 
